<resources>
    <string name="app_name">City Alert</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_btn_logout">Logout</string>
    <string name="txt_btn_viewnotes_prelogin">View Notes</string>
    <string name="hint_email">Email</string>
    <string name="hint_passwd">Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_person">Perfil</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title_fragment_view_notes">Notes</string>
    <string name="txt_btn_add">Save</string>
    <string name="txt_btn_edit">Save Edit</string>
    <string name="hint_title">Title</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="hint_note_description">Description</string>
    <string name="delete_all_menu_title">Delete All</string>
    <string name="start_edit_menu_title">Edit</string>
    <string name="delete_specific_note_title">Delete Note</string>
    <string name="delete_specific_occurrence_title">Delete Occurrence</string>
    <string name="note_title_bind_view_holder">Title: %1$1s</string>
    <string name="note_created_bind_view_holder">Created On: %1$1s</string>
    <string name="note_updated_bind_view_holder">Updated On: %1$1s</string>
    <string name="note_description_bind_view_holder">Description: %1$1s</string>
    <string name="google_map_api_key" translatable="false">AIzaSyBKfB3vdOjF_kPjt0AAKGqADNNvPiPZ5-w</string>
    <string name="coordenadas">Coordinates</string>
    <string name="titulo">Description</string>
    <string name="lat">Lat: </string>
    <string name="lng">Lng: </string>
    <string name="label_buraco">Hole</string>
    <string name="label_arvore">Fallen Tree</string>
    <string name="label_poste">Fallen Pole</string>

    <!-- Shared Preferences -->
    <string name="preference_file_key" translatable="false">sp-fk</string>
    <string name="session_status" translatable="false">logged</string>
    <string name="person_id" translatable="false">pid</string>
    <string name="title_activity_add_occurrence" translatable="false">AddOccurrenceActivity</string>
    <string name="erro_insert_photo">Take a photo first.</string>
    <string name="empty_string">Insert some text.</string>
    <string name="created_success">Note created successfuly.</string>
    <string name="edited_success">Note edited successfuly.</string>
    <string name="notes_deleted">Notes deleted successfuly.</string>
    <string name="note_deleted">Note deleted successfuly.</string>
    <!-- Errors -->

</resources>