<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".AddOccurrenceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_occurrence_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/new_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/add_occurrence_toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/new_description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:background="@drawable/txt_box_radius"
        android:hint="@string/hint_title"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"
        android:paddingHorizontal="17dp"
        app:layout_constraintTop_toBottomOf="@id/new_description_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/add_occurrence_img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintTop_toBottomOf="@id/new_description_txt"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/add_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic__add_a_photo_24"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/add_occurrence_img"
        app:layout_constraintStart_toEndOf="@id/add_occurrence_img"/>

    <TextView
        android:id="@+id/new_coordenadas_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_occurrence_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/coordenadas"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/new_lat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:text="@string/lat"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/new_coordenadas_txt"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/new_lat_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:background="@drawable/txt_box_radius"
        android:hint="@string/latitude"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="150dp"
        android:paddingHorizontal="17dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/new_coordenadas_txt"
        app:layout_constraintStart_toEndOf="@id/new_lat_txt"/>

    <TextView
        android:id="@+id/new_lng_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="150dp"
        android:text="@string/lng"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/new_coordenadas_txt"
        app:layout_constraintStart_toEndOf="@id/new_lat_txt"/>

    <EditText
        android:id="@+id/new_lng_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:background="@drawable/txt_box_radius"
        android:hint="@string/longitude"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:paddingHorizontal="17dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/new_coordenadas_txt"
        app:layout_constraintStart_toEndOf="@id/new_lng_txt"/>


        <RadioGroup
            android:id="@+id/radio_categoria"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/new_lat_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RadioButton android:id="@+id/radio_buraco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_buraco"
                android:textColor="@color/black"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_queda_arvore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_arvore"
                android:textColor="@color/black"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_queda_poste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_poste"
                android:textColor="@color/black"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    <Button
        android:id="@+id/insert_occurrence_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_radius"
        android:paddingHorizontal="40dp"
        android:text="@string/txt_btn_edit"
        android:textColor="@color/dark_green"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/radio_categoria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>