<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".AddNoteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_note_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/note_title"
        android:layout_width="232dp"
        android:layout_height="40dp"
        android:background="@drawable/txt_box_radius"
        android:hint="@string/hint_title"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/add_note_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
/>
    <EditText
        android:id="@+id/note_description"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/txt_box_radius"
        android:hint="@string/hint_note_description"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <Button
        android:id="@+id/add_note_btn"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_btn_add"
        android:textColor="@color/dark_green"
        android:background="@drawable/btn_radius"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/note_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>