<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    tools:context=".ViewSpecificOccurrenceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/view_specific_occurrence_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <EditText
        android:id="@+id/description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:background="@drawable/txt_box_radius"
        android:hint="@string/hint_title"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="150dp"
        android:paddingHorizontal="17dp"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/view_specific_occurrence_toolbar"
        app:layout_constraintBottom_toTopOf="@id/occurrence_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/occurrence_img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:layout_constraintTop_toBottomOf="@id/description_txt"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/coordenadas_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/occurrence_img"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/coordenadas"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/lat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:text="@string/lat"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/coordenadas_txt"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/lat_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="6dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/coordenadas_txt"
        app:layout_constraintStart_toEndOf="@id/lat_txt"/>
    <TextView
        android:id="@+id/lng_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="180dp"
        android:text="@string/lng"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/coordenadas_txt"
        app:layout_constraintStart_toEndOf="@id/lat_txt"/>
    <TextView
        android:id="@+id/lng_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/coordenadas_txt"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/save_edit_occurrence_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_radius"
        android:layout_marginVertical="30dp"
        android:paddingHorizontal="40dp"
        android:text="@string/txt_btn_edit"
        android:textColor="@color/dark_green"
        android:visibility="invisible"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@id/lat_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>